[package]
name = "ctr-rsf"
version = "0.1.0"
edition = "2024"
description = "Generate and edit .rsf files for CTR homebrew projects."
authors = [ "TurboToad12" ]
repository = "https://github.com/turbotoad12/ctr-rsf"
license = "MIT"


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
rand = "0.8"